First recipe completed
Added back to top and back to main page link

--- a/recipes/hummus-pizza.html
+++ b/recipes/hummus-pizza.html
@@ -30,6 +30,10 @@
         <br>
         <li>Bake in the preheated oven until the crust is golden brown and cheese is melted in the center, 10 to 15 minutes. Slice and serve.</li>
     </ol>
+    <br>
+    <a href="./hummus-pizza.html">Back to Top</a>
+    <br>
+    <a href="../index.html">Back to main page</a>
 </body>
 </html>
 
