Gajar ka Halwa recipe webpage finished
Added a second webpage linking with its contents and ending with a link back to main page.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <li>
             <a href="recipes/hummus-pizza.html">Hummus Pizza</a>
         </li>
+        <br>
+        <li>
+            <a href="recipes/Gajar-halwa.html">Gajar ka Halwa</a>
+        </li>
     </ul>
 </body>
 </html>
