--- a/recipes/egg-roll.html
+++ b/recipes/egg-roll.html
@@ -6,20 +6,28 @@
 </head>
 <body>
     <h1>Egg Rolls</h1>
-    <img src="images/egg-rolls.jpg" alt="Spicy egg rolls with seasoning" width="600" >
+    <img src="images/egg-rolls.jpg" alt="Spicy egg rolls with seasoning and soy sauce" width="600" >
     <br>
     <h3>About the recipe</h3>
     <p>
-        This pizza uses <strong>hummus</strong> instead of the usual red sauce—a <em>unique and healthy pizza</em> for those bored with the traditional. Top with your favorite veggies and cheese.
+        Crispy egg rolls filled with seasoned pork, cabbage, and carrots are a 
+        fabulous side dish to serve alongside stir-fry dishes. These homemade 
+        egg rolls are almost identical to what you'd get at a Chinese restaurant! 
+        Serve warm with egg roll sauce or soy sauce if desired.
     </p>
     <br>
     <h3>Ingredients</h3>
     <ul>
-        <li>one (10 ounce) can refrigerated pizza crust dough </li>
-        <li>one cup of hummus spread</li> 
-        <li>one and a half cup of sliced bell peppers, any color</li>
-        <li>one cup broccoli florets</li>
-        <li>two cups shredded Monterey Jack cheese</li>  
+        <li>half pound ground pork</li>
+        <li>half teaspoon ground ginger, or more to taste</li> 
+        <li>half teaspoon garlic powder, or more to taste</li>
+        <li>one ounces shredded carrots</li>
+        <li>one cup shredded cabbage</li>
+        <li>one tablespoon all-purpose flour</li>
+        <li>one tablespoon water</li>
+        <li>one tablespoon peanut oil for frying, or as needed</li>  
+        <li>four (7 inch square) egg roll wrappers</li>
+        <li>one tablespoon sesame seeds</li>
     </ul>
     <br>
     <h3>Directions</h3>
