--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <li>
             <a href="recipes/Gajar-halwa.html">Gajar ka Halwa</a>
         </li>
+        <br>
+        <li>
+            <a href="recipes/egg-roll.html">Tasty Egg Roll</a>
+        </li>
     </ul>
 </body>
 </html>
