--- a/recipes/egg-roll.html
+++ b/recipes/egg-roll.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Egg Rolls</h1>
-    <img src="images/egg-rolls.jpg" alt="Spicy egg rolls with seasoning and soy sauce" width="600" >
+    <img src="images/egg-rolls.jpg" alt="Spicy egg rolls with seasoning and soy sauce" width="800" >
     <br>
     <h3>About the recipe</h3>
     <p>
@@ -32,14 +32,24 @@
     <br>
     <h3>Directions</h3>
     <ol>
-        <li>Preheat the oven to 475 degrees C (220 degrees C).</li>
+        <li>Season pork with ginger and garlic powder in a large bowl; mix until thoroughly combined.</li>
         <br>
-        <li>Roll out pizza crust and place on a pizza pan or baking sheet. Spread a thin layer of hummus over the crust. Arrange sliced peppers and broccoli over the hummus, and top with shredded cheese.</li>
+        <li>Place pork in a medium skillet over medium heat. Cook and stir until pork is browned and crumbly, 5 to 7 minutes.</li>
         <br>
-        <li>Bake in the preheated oven until the crust is golden brown and cheese is melted in the center, 10 to 15 minutes. Slice and serve.</li>
+        <li>Combine cooked pork, cabbage, and carrots in a large bowl; mix until egg roll filling is well combined.</li>
+        <br>
+        <li>Mix four and water together in a small bowl until a paste forms.</li>
+        <br>
+        <li>Heat oil in a large skillet to about 375 degrees F (190 degrees C) or medium high heat.</li>
+        <br>
+        <li>While oil is heating, prepare egg rolls: Lay one egg roll wrapper on a work surface with one corner pointed toward you like a diamond. Place about 1/4 to 1/3 cup of the filling in the center of the wrapper. Fold the bottom corner up and over the filling. Fold the left and right corners in toward the center. Push the egg roll away from you and roll toward the top corner. Brush a bit of the flour paste over the inside of that corner to help seal the egg roll.</li>
+        <br>
+        <li>Fry egg rolls in the hot oil, turning occasionally, until golden brown and crispy, 5 to 8 minutes. Remove from oil and drain on paper towels or rack.</li>
+        <br>
+        <li>Place egg rolls on a serving plate and sprinkle sesame seeds over top.</li>
     </ol>
     <br>
-    <a href="./hummus-pizza.html">Back to Top</a>
+    <a href="./egg-roll.html">Back to Top</a>
     <br>
     <a href="../index.html">Back to main page</a>
 </body>
