--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>ODIN RECIPES</h1>
+    <img src="resources/foods.jpg" alt="All kinds of recipes!" width="400">
     <ul>
         <li>
             <a href="recipes/hummus-pizza.html">Hummus Pizza</a>
